Blender 2.91 (and 2.92) cycles viewport rendering issue #83300

Closed
opened 2020-12-01 22:32:13 +01:00 by Nathaniel Sun · 18 comments

System Information
Operating system: Windows 10
Graphics card: Nvidia Quadro 4000 (y2010)

Blender Version
Broken: (2.91, 2.92)
Worked: (2.83, 2.90 (different issue))

Short description of error
With viewport render disabled for a simple fire simulation, cycles repeatedly renders the first sample over and over again in the viewport render mode.

Exact steps for others to reproduce the error

  1. Open Blender (2.91 or 2.92)
  2. Create a simple Mantaflow fire simulation with at least one input and one domain.
  3. Give the domain a simple volumetric material for the fire.
  4. Set the render engine to Cycles.
  5. Disable viewport rendering for the fire domain.
  6. Click on viewport rendered view.
  7. Watch Cycles try to repeatedly render the first sample over and over.
  8. If you enable viewport denoising and set the denoise to start at one sample, the problem goes away, but is verrrry slow.
**System Information** Operating system: Windows 10 Graphics card: Nvidia Quadro 4000 (y2010) **Blender Version** Broken: (2.91, 2.92) Worked: (2.83, 2.90 (different issue)) **Short description of error** With viewport render disabled for a simple fire simulation, cycles repeatedly renders the first sample over and over again in the viewport render mode. **Exact steps for others to reproduce the error** 1. Open Blender (2.91 or 2.92) 2. Create a simple Mantaflow fire simulation with at least one input and one domain. 3. Give the domain a simple volumetric material for the fire. 4. Set the render engine to Cycles. 5. Disable viewport rendering for the fire domain. 6. Click on viewport rendered view. 7. Watch Cycles try to repeatedly render the first sample over and over. 8. If you enable viewport denoising and set the denoise to start at one sample, the problem goes away, but is verrrry slow.
Author

Added subscriber: @Sycro27

Added subscriber: @Sycro27

#83617 was marked as duplicate of this issue

#83617 was marked as duplicate of this issue

#83487 was marked as duplicate of this issue

#83487 was marked as duplicate of this issue

#83335 was marked as duplicate of this issue

#83335 was marked as duplicate of this issue

#83301 was marked as duplicate of this issue

#83301 was marked as duplicate of this issue
Kévin Dietrich self-assigned this 2020-12-02 11:06:32 +01:00

Added subscribers: @bent, @kevindietrich

Added subscribers: @bent, @kevindietrich

This issue was referenced by fdcf30d01d

This issue was referenced by fdcf30d01d60d1c31ebbf9f23d96d24b9bde3d24

This issue was referenced by 84451f89f5

This issue was referenced by 84451f89f5c1ca84a3647da6906f95f6fe9f6c1f

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'

Added subscribers: @kitcat, @rboxman, @Harvester

Added subscribers: @kitcat, @rboxman, @Harvester

Added subscribers: @valera-8, @rjg

Added subscribers: @valera-8, @rjg

Added subscriber: @Blackcan

Added subscriber: @Blackcan

Added subscriber: @Qaveth

Added subscriber: @Qaveth

Try stopping the animation timeline from playing and the problem should be fixed.

Try stopping the animation timeline from playing and the problem should be fixed.

Removed subscriber: @Qaveth

Removed subscriber: @Qaveth

Added subscriber: @Qaveth

Added subscriber: @Qaveth

@Qaveth You're commenting on a ticket for an issue that has already been fixed.

@Qaveth You're commenting on a ticket for an issue that has already been fixed.

In #83300#1092531, @rjg wrote:
@Qaveth You're commenting on a ticket for an issue that already been fixed.

Pardon me, I am new here.

> In #83300#1092531, @rjg wrote: > @Qaveth You're commenting on a ticket for an issue that already been fixed. Pardon me, I am new here.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83300
No description provided.