Fix T83300: constant scene refreshing in Cycles with empty volumes

This infinite loop is caused by a conflict between the volume mesh
creation which unintentionally clears the shaders before early exiting
when no grid is found, and the Blender exporter which adds back the
shaders causing us to reupdate as the shaders changed.

To fix this simply preserve the shaders on the Volume node.

(Backported bugfix with additional changes to make it work in 2.91)