intern/cycles/render/hair.h
@@ -103,7 +103,7 @@ class Hair : public Geometry {
   ~Hair();
 
   /* Geometry */
-  void clear() override;
+  void clear(bool preserve_shaders = false) override;
 
   void resize_curves(int numcurves, int numkeys);
   void reserve_curves(int numcurves, int numkeys);
