intern/cycles/render/volume.cpp
@@ -56,9 +56,9 @@ Volume::Volume() : Mesh(node_type, Geometry::VOLUME)
   object_space = false;
 }
 
-void Volume::clear()
+void Volume::clear(bool preserve_shaders)
 {
-  Mesh::clear(true);
+  Mesh::clear(preserve_shaders, true);
 }
 
 struct QuadData {
@@ -530,8 +530,10 @@ void GeometryManager::create_volume_mesh(Volume *volume, Progress &progress)
   }
 
   /* Clear existing volume mesh, done here in case we early out due to
-   * empty grid or missing volume shader. */
-  volume->clear();
+   * empty grid or missing volume shader.
+   * Also keep the shaders to avoid infinite loops when synchronizing, as this will tag the shaders
+   * as having changed. */
+  volume->clear(true);
   volume->need_update_rebuild = true;
 
   if (!volume_shader) {
@@ -606,6 +608,7 @@ void GeometryManager::create_volume_mesh(Volume *volume, Progress &progress)
   builder.create_mesh(vertices, indices, face_normals, face_overlap_avoidance);
 
   volume->reserve_mesh(vertices.size(), indices.size() / 3);
+  volume->used_shaders.clear();
   volume->used_shaders.push_back(volume_shader);
 
   for (size_t i = 0; i < vertices.size(); ++i) {
